@@ -60,6 +60,7 @@ aarch64-tests: \
 	test0033-aarch64-binary \
 	test0034-aarch64-binary \
 	test0035-aarch64-binary \
+	test0036-aarch64-binary \
 	test0100-aarch64-binary \
 	test0101-aarch64-binary \
 	test0102-aarch64-binary \
@@ -106,6 +107,7 @@ amd64-tests: \
 	test0033-amd64-binary \
 	test0034-amd64-binary \
 	test0035-amd64-binary \
+	test0036-amd64-binary \
 	test0100-amd64-binary \
 	test0101-amd64-binary \
 	test0102-amd64-binary \
@@ -149,6 +151,7 @@ knight-posix-tests: \
 	test0033-knight-posix-binary \
 	test0034-knight-posix-binary \
 	test0035-knight-posix-binary \
+	test0036-knight-posix-binary \
 	test0100-knight-posix-binary \
 	test0101-knight-posix-binary \
 	test0102-knight-posix-binary \
@@ -216,6 +219,7 @@ armv7l-tests: \
 	test0033-armv7l-binary \
 	test0034-armv7l-binary \
 	test0035-armv7l-binary \
+	test0036-armv7l-binary \
 	test0100-armv7l-binary \
 	test0101-armv7l-binary \
 	test0102-armv7l-binary \
@@ -262,6 +266,7 @@ x86-tests: \
 	test0033-x86-binary \
 	test0034-x86-binary \
 	test0035-x86-binary \
+	test0036-x86-binary \
 	test0100-x86-binary \
 	test0101-x86-binary \
 	test0102-x86-binary \
@@ -308,6 +313,7 @@ riscv32-tests: \
 	test0033-riscv32-binary \
 	test0034-riscv32-binary \
 	test0035-riscv32-binary \
+	test0036-riscv32-binary \
 	test0100-riscv32-binary \
 	test0101-riscv32-binary \
 	test0102-riscv32-binary \
@@ -354,6 +360,7 @@ riscv64-tests: \
 	test0033-riscv64-binary \
 	test0034-riscv64-binary \
 	test0035-riscv64-binary \
+	test0036-riscv64-binary \
 	test0100-riscv64-binary \
 	test0101-riscv64-binary \
 	test0102-riscv64-binary \
@@ -470,6 +477,9 @@ test0034-riscv32-binary: M2-Planet | results
 
 test0035-riscv32-binary: M2-Planet | results
 	test/test0035/run_test.sh riscv32
+
+test0036-riscv32-binary: M2-Planet | results
+	test/test0036/run_test.sh riscv32
 
 test0100-riscv32-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv32
@@ -603,6 +613,9 @@ test0034-riscv64-binary: M2-Planet | results
 test0035-riscv64-binary: M2-Planet | results
 	test/test0035/run_test.sh riscv64
 
+test0036-riscv64-binary: M2-Planet | results
+	test/test0036/run_test.sh riscv64
+
 test0100-riscv64-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv64
 
@@ -734,6 +747,9 @@ test0034-aarch64-binary: M2-Planet | results
 
 test0035-aarch64-binary: M2-Planet | results
 	test/test0035/run_test.sh aarch64
+
+test0036-aarch64-binary: M2-Planet | results
+	test/test0036/run_test.sh aarch64
 
 test0100-aarch64-binary: M2-Planet | results
 	test/test0100/run_test.sh aarch64
@@ -867,6 +883,9 @@ test0034-amd64-binary: M2-Planet | results
 test0035-amd64-binary: M2-Planet | results
 	test/test0035/run_test.sh amd64
 
+test0036-amd64-binary: M2-Planet | results
+	test/test0036/run_test.sh amd64
+
 test0100-amd64-binary: M2-Planet | results
 	test/test0100/run_test.sh amd64
 
@@ -989,6 +1008,9 @@ test0034-knight-posix-binary: M2-Planet | results
 
 test0035-knight-posix-binary: M2-Planet | results
 	test/test0035/hello-knight-posix.sh
+
+test0036-knight-posix-binary: M2-Planet | results
+	test/test0036/hello-knight-posix.sh
 
 test0100-knight-posix-binary: M2-Planet | results
 	test/test0100/hello-knight-posix.sh
@@ -1179,6 +1201,9 @@ test0034-armv7l-binary: M2-Planet | results
 test0035-armv7l-binary: M2-Planet | results
 	test/test0035/run_test.sh armv7l
 
+test0036-armv7l-binary: M2-Planet | results
+	test/test0036/run_test.sh armv7l
+
 test0100-armv7l-binary: M2-Planet | results
 	test/test0100/run_test.sh armv7l
 
@@ -1310,6 +1335,9 @@ test0034-x86-binary: M2-Planet | results
 
 test0035-x86-binary: M2-Planet | results
 	test/test0035/run_test.sh x86
+
+test0036-x86-binary: M2-Planet | results
+	test/test0036/run_test.sh x86
 
 test0100-x86-binary: M2-Planet | results
 	test/test0100/run_test.sh x86
