@@ -267,6 +267,13 @@ e5fe180200cf66eb36173321819af763c62ca27045f24fbd1ce5e442ae3493a6  test/results/t
 f810c41f840fc980640524f0f0c77669d48113fdb9dc579ab6dcc9c39c1ce074  test/results/test0035-riscv32-binary
 0c15556c477801f60c9c6bb029f72fea784b286618551eac87e9060d2a56d1ea  test/results/test0035-riscv64-binary
 ecb04d2f8f7c56530687c60b79c9749602b2aacfcaa2e7e5aee7905282a84927  test/results/test0035-x86-binary
+cb674fcd1b58ff84a10bddb3275462a4315451ff31f46bb5b6a028db811a655f  test/results/test0036-aarch64-binary
+fef1b253a8b52f7348def4374f4c7f3774159244e34584fc5f6606dbe4dff1c6  test/results/test0036-amd64-binary
+4cd18f7224f8746d26ebae9767889fe122bf5683a5831fa1439b1c9da6f7edca  test/results/test0036-armv7l-binary
+0db28a11384188cfaf7045960a61d84fca072e7a267d4b9bac24a379fa3e7300  test/results/test0036-knight-posix-binary
+6b4c701e0061d4bac8969ba958ce9669fae48047a4f2f3bd5536489047e5558f  test/results/test0036-riscv32-binary
+bd59f3c9ad15ef0cbac03e5804a465658d8a466455311d19ae8bba6454ed2d33  test/results/test0036-riscv64-binary
+4066873c35121166268c616a80a73c093e76d442c54c58f71885481dc5d5f8af  test/results/test0036-x86-binary
 9fbdb6d8893d810edcd82f573dd8237bd9821c907393f286a3c21b1f8f721bb8  test/results/test0100-aarch64-binary
 ec4da43c473924f70827c904a4c6d5f45701ab9e76b444ba152af893e16ee440  test/results/test0100-amd64-binary
 8f92b728d28972166e4aa7a3acc400e6dd629ec769cc176f1eedacd26855d130  test/results/test0100-armv7l-binary
@@ -315,10 +322,10 @@ abf349aaf23111dcf813ca4c11d725e154d2367bf5ab91b62e022fd34da72f7d  test/results/t
 af4dd167d0ea436831ad24b3c337a4255b09e4628ff00979e7787735de927186  test/results/test0106-riscv32-binary
 818e8e8de251909fac6002b7b6d66a70f5e8ed7eeec5ddf5b8b3588cbc436a53  test/results/test0106-riscv64-binary
 934581c994dd81c4bbd7b501084f9734c8cd0b9a78fffb08adba75b17083503a  test/results/test0106-x86-binary
-b2e76af93b7c6bcf2c5cf2888bd88fb896639f1d7fed7f0b85ccfff82587fb7c  test/results/test1000-aarch64-binary
-12f3f8e3ac9d9fb8890547fe2d18872d0412fceaf5e9f5fecd5d9871e903d776  test/results/test1000-amd64-binary
-6eb2236b0dec3a68e14611abff7198a453a07a3db372d8a5f0a976c84d3f6047  test/results/test1000-armv7l-binary
-c59f5cc5b68d2a8bd67688804ff216af4ceb4ed15aecb42e5504dfa1f0253d7a  test/results/test1000-knight-posix-binary
-21ccd5475e4c40eaf730b018e2dd00339adcbfd16e6ad2e191c9f0b681ecb2ee  test/results/test1000-riscv32-binary
-225c2941b72ccc63030b9d2ff61223e8e75fdb9df7856959805278b57d7959c7  test/results/test1000-riscv64-binary
-91f921a7fed3290fa475fe5fd88e4eeb405e8cef4f3f1942114c44d37754c381  test/results/test1000-x86-binary
+df91081418f8c0e5f31914be182d587a684c927d8342112fab47a8a39275a691  test/results/test1000-aarch64-binary
+52235602674ca3dc7c102fadddd45129573fda765efc68d51cc4d703cc461b72  test/results/test1000-amd64-binary
+0b9ab271091a21c5497f7360c8064cdabd790479027abf96146cafbc052a8a1b  test/results/test1000-armv7l-binary
+fd8abbef2b85ad6b4f5e44b23254acb81c6f1ae4f42f899fd6fbd1192249cafb  test/results/test1000-knight-posix-binary
+63482abe2c86d00d456f463fbebc49a720b48f869ea3055fcf640bf0ea27214a  test/results/test1000-riscv32-binary
+7bc1ddd0faced00471b7395bcc591a78775b27318597019686f97e9c5df5a793  test/results/test1000-riscv64-binary
+4e975be09c02624e7eee165821e1b559e5da4af5f90e9b4818e3fa89ddde74f9  test/results/test1000-x86-binary
